# PocketSolar

./: .gitignore  Cargo.toml  LICENSE  Main.rs  Paper.tex  PocketSolar.ino  Readme.md  Serve.sh  Theory.py  ViyLine.ino  ViyLine.rs  index.html
.cargo/: config.toml
.github/: Readme.md
Assembly/: Compile.sh  ViyLine.asm  ViyLineCAP.asm
Assembly/Legacy/: ViyLinePWM.asm
Paper/: Paper.tex
PocketSolar/: GUI.rs  IVCurve.rs  Serial.rs  SolarCurve.rs  Window.rs  mod.rs
ViyLine/: Bluetooth.rs  Curve.rs  GUI.rs  IVCurve.rs  Serial.rs  ViyLine.rs
Website/: manifest.json  sw.js
