[package]
name = "ViyLine"
version = "2022.11.11"
authors = ["Tremeschin"]
edition = "2021"

[[bin]]
name = "ViyLine"
path = "ViyLine.rs"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.147", features = ["derive"] }
libm = "0.2.6"
itertools = "0.10.5"
itertools-num = "0.1.3"
num = "0.4.0"
rand = "0.8.5"
rand_pcg = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2
